# ReadAlly.AI

./: .gitignore  README.md  docker-compose.prod.yml  verify_changes.py
.github/workflows/: deploy.yml
backend/: .env.example  add_avatar_column.py  ai_service.py  auth.py  check_db.py  database.py  debug_db.py  ingest_service.py  log_conf.py  main.py  models.py  pyproject.toml  readally.db  reading_service.py  reanalyze_all.py  reanalyze_donkey.py  reanalyze_specific_articles.py  refresh_article.py  refresh_data.py  test_ai.py  test_ai_v2.py  test_system_role.py
backend/crawler/: shanbay.py
backend/migrations/: migrate_v2.py
docker/: .env.example  backend.Dockerfile  docker-compose.yaml  frontend.Dockerfile
frontend/: .env.example  next.config.js  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/read/[articleId]/: page.tsx
frontend/src/components/common/: Logo.tsx
frontend/src/components/dashboard/: StreakCalendar.tsx
frontend/src/components/reading/: ParagraphBlock.tsx  ReadingLayout.tsx
frontend/src/lib/: api.ts  store.ts  useTheme.ts  useWordPronunciation.ts
