[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.0.1",
    "beautifulsoup4>=4.14.3",
    "dashscope>=1.25.4",
    "fastapi>=0.124.4",
    "passlib[bcrypt]>=1.7.4",
    "pypdf>=6.4.2",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
    "apscheduler>=3.10.4",
    "pydub>=0.25.1",
]
